--- a/index.html
+++ b/index.html
@@ -24,19 +24,7 @@
 <body>
     
     <div class="container-fluid">
-        <div class="row py-5 my-5" ng-controller="LoginController">
-            <form ng-submit="loginUser()" name="loginForm" class="w-25 py-5 my-5 offset-6 col-6" novalidate>
-                <div class="form-group">
-                  <label for="username">Username</label>
-                  <input ng-model="user.username" type="text" class="form-control" id="username" aria-describedby="emailHelp">
-                </div>
-                <div class="form-group">
-                  <label for="password">Password</label>
-                  <input ng-model="user.password" type="password" class="form-control" id="password">
-                </div>
-                <input type="submit" class="btn btn-primary" value="login">
-            </form>
-        </div>
+        <main ng-view></main>
     </div>
     
     <!-- bootstrap JS -->
