Rename landing.html to task.html and add logout function

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 </head>
 <body>
     
+    <header ng-include="'./navbar.html'"></header>
+
     <div class="container-fluid">
         <main ng-view></main>
     </div>
