Add retrieve notes of authenticated user

--- a/navbar.html
+++ b/navbar.html
@@ -3,5 +3,5 @@
     <li ng-show="authenticated" class="mr-auto"><a href="#!/logout" data-toggle="modal" data-target="#logoutModal">Logout</a></li>
     <li ng-show="authenticated && isAdmin"><a href="#">Users</a></li>
     <li ng-show="authenticated"><a href="#!/task">Task</a></li>
-    <li ng-show="authenticated"><a href="#">Notes</a></li>
+    <li ng-show="authenticated"><a href="#!/note">Notes</a></li>
 </ul>
