Add styling on navbar

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
     
-    <div class="container-fluid">
+    <div class="container-fluid px-0">
         <header ng-include="'./navbar.html'"></header>
         <main ng-view></main>
     </div>
