--- a/navbar.html
+++ b/navbar.html
@@ -12,7 +12,7 @@
         </div>
         <div class="modal-footer">
             <button type="button" class="btn btn-primary" data-dismiss="modal" ng-click="confirmLogout=true; logout()">Yes</button>
-            <button type="button" class="btn btn-secondary" data-dismiss="modal" ng-click="cancel()">No</button>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal" ng-click="confirmLogout=false; cancel()">No</button>
         </div>
       </div>
     </div>
