Fix navbar mobile responsiveness

--- a/navbar.html
+++ b/navbar.html
@@ -21,7 +21,10 @@
 <ul class="top-navbar">
     <li><h2 id="title-header">TaskMaster</h2></li>
     <li ng-show="authenticated" class="mr-auto" id="logout-button"><button type="button" class="btn" data-toggle="modal" data-target="#logoutModal" title="Logout"><i class='bx bx-log-out-circle'></i></button></li>
-    <li ng-show="(authenticated == 'true' && isAdmin == 'true') || (authenticated == true && isAdmin == true)"><a href="#!/all-users">Users</a></li>
-    <li ng-show="authenticated"><a href="#!/task">Task</a></li>
-    <li ng-show="authenticated"><a href="#!/note">Notes</a></li>
+    <li ng-show="authenticated"><button ng-click="toggleDisplay()" class="burger-menu"><i class='bx bx-menu'></i></button></li>
+    <div ng-show="display">
+      <li ng-show="(authenticated == 'true' && isAdmin == 'true') || (authenticated == true && isAdmin == true)" class="nav-links"><a href="#!/all-users">Users</a></li>
+      <li ng-show="authenticated" class="nav-links"><a href="#!/task">Task</a></li>
+      <li ng-show="authenticated" class="nav-links"><a href="#!/note">Notes</a></li>
+    </div>
 </ul>
