Fix responsiveness on other mobile screen sizes

--- a/navbar.html
+++ b/navbar.html
@@ -24,7 +24,7 @@
     <li ng-show="authenticated"><button ng-click="toggleDisplay()" class="burger-menu"><i class='bx bx-menu'></i></button></li>
     <div ng-show="display">
       <li ng-show="(authenticated == 'true' && isAdmin == 'true') || (authenticated == true && isAdmin == true)" class="nav-links"><a href="#!/all-users">Users</a></li>
-      <li ng-show="authenticated" class="nav-links"><a href="#!/task">Task</a></li>
+      <li ng-show="authenticated" class="nav-links"><a href="#!/task">Tasks</a></li>
       <li ng-show="authenticated" class="nav-links"><a href="#!/note">Notes</a></li>
     </div>
 </ul>
