--- a/navbar.html
+++ b/navbar.html
@@ -1,6 +1,6 @@
 <div ng-controller="LogoutController" class="modal" tabindex="-1" id="logoutModal" data-backdrop="static">
-    <div class="modal-dialog">
-      <div class="modal-content">
+    <div class="modal-dialog logout-modal">
+      <div class="modal-content rounded-0">
         <div class="modal-header">
           <h5 class="modal-title">Confirm</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -8,11 +8,11 @@
           </button>
         </div>
         <div class="modal-body">
-          <p>Are you sure you want to logout?</p>
+          <p class="text-center">Are you sure you want to logout?</p>
         </div>
         <div class="modal-footer">
-            <button type="button" class="btn btn-primary" data-dismiss="modal" ng-click="confirmLogout=true; logout()">Yes</button>
-            <button type="button" class="btn btn-secondary" data-dismiss="modal" ng-click="confirmLogout=false; cancel()">No</button>
+            <button type="button" class="btn btn-primary action-buttons-layout" data-dismiss="modal" ng-click="confirmLogout=true; logout()">Yes</button>
+            <button type="button" class="btn btn-danger action-buttons-layout" data-dismiss="modal" ng-click="confirmLogout=false; cancel()">No</button>
         </div>
       </div>
     </div>
@@ -23,8 +23,8 @@
     <li ng-show="authenticated" class="mr-auto" id="logout-button"><button type="button" class="btn" data-toggle="modal" data-target="#logoutModal" title="Logout"><i class='bx bx-log-out-circle'></i></button></li>
     <li ng-show="authenticated"><button ng-click="toggleDisplay()" class="burger-menu"><i class='bx bx-menu'></i></button></li>
     <div ng-show="display">
-      <li ng-show="(authenticated == 'true' && isAdmin == 'true') || (authenticated == true && isAdmin == true)" class="nav-links"><a href="#!/all-users">Users</a></li>
-      <li ng-show="authenticated" class="nav-links"><a href="#!/task">Tasks</a></li>
-      <li ng-show="authenticated" class="nav-links"><a href="#!/note">Notes</a></li>
+        <li ng-show="(authenticated == 'true' && isAdmin == 'true') || (authenticated == true && isAdmin == true)" class="nav-links"><a href="#!/all-users">Users</a></li>
+        <li ng-show="authenticated" class="nav-links"><a href="#!/task">Tasks</a></li>
+        <li ng-show="authenticated" class="nav-links"><a href="#!/note">Notes</a></li>
     </div>
 </ul>
