Created a loader block screen and applied it to login, register, task, taskView, careate task, delete task, archive task and activate task

--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
 <body>
     
     <div class="container-fluid px-0">
+        <div class="loader-container" ng-show="loading">
+            <div class="loader">
+                <div class="box"></div>
+                <div class="box"></div>
+                <div class="box"></div>
+            </div>
+        </div>
         <header ng-include="'./navbar.html'"></header>
         <main ng-view></main>
     </div>
