--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="/assets/taskmaster-favicon.png">
+
     <!-- external css -->
     <link rel="stylesheet" href="./index.css" type="text/css">
 
